NetworkPolicy/project1/backend-nginx-accept.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-nginx-netpol
  labels:
    pol: backend-nginx-netpol
spec:
  podSelector:
    matchLabels:
      tier: backend
      app: nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: centos
              tier: backend
